--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item_no-bullit"><a href="#0" class="header__link active">главная</a></li>
+        <li class="header__links-list-item"><a href="#0" class="header__link link-line">посмотреть лоты</a></li>
+        <li class="header__links-list-item"><a href="#0" class="header__link link-line">об аукционе</a></li>
+      </ul>
+    </nav>
+    <a class="header__logo">
+      <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип черного цвета">
+    </a>
+    <address class="header-address">
+      <a class="header-address__link link-line" href="tel:+9999555555">+9 999 555 5555</a>
+      <a class="header-address__link link-line" href="mailto:info@sobaka.ge" >info@sobaka.ge</a>
+      <p class="header-address__text">наб. Принсенграхт 263- <br> 265, Амстердам</p>
+    </address>
+  </header>
+  <main>
+    <section class="cover">
+      <h1></h1>
+      <div class="description">
+        <p></p>
+        <button></button>
+      </div>
+    </section>
+    <section class="lots"></section>
+    <section class="about"></section>
+  </main>
+  <footer class="footer"></footer>
+</body>
+
 </html>
