--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <header class="header">
     <nav class="header__menu">
       <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item_no-bullit"><a href="#0" class="header__link active">главная</a></li>
+        <li class="header__links-list-item header__links-list-item_no-bullit"><a href="#0"
+            class="header__link active">главная</a></li>
         <li class="header__links-list-item"><a href="#0" class="header__link link-line">посмотреть лоты</a></li>
         <li class="header__links-list-item"><a href="#0" class="header__link link-line">об аукционе</a></li>
       </ul>
@@ -25,20 +26,80 @@
     </a>
     <address class="header-address">
       <a class="header-address__link link-line" href="tel:+9999555555">+9 999 555 5555</a>
-      <a class="header-address__link link-line" href="mailto:info@sobaka.ge" >info@sobaka.ge</a>
+      <a class="header-address__link link-line" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p class="header-address__text">наб. Принсенграхт 263- <br> 265, Амстердам</p>
     </address>
   </header>
   <main>
     <section class="cover">
-      <h1></h1>
-      <div class="description">
-        <p></p>
-        <button></button>
+      <div class="overlay"></div>
+      <h1 class="cover__title">
+        <span class="aligned-text letter-spacing-extended">оно</span>
+        <span class="aligned-text_center letter-spacing-extended">тебе</span>
+        <span class="cover__block">
+          <span class="aligned-text_right letter-spacing-extended">над</span>
+          <span class="aligned-text_right no-letter-spacing ">о</span>
+        </span>
+
+
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+        <button class="bet-button" type="button">сделать ставку</button>
+      </div>
+
+    </section>
+    <section class="lots">
+      <h2 class="h2-sections lots__heading">Лоты</h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card card_type_film">
+              <div class="overlay"></div>
+              <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </div>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card card_type_book">
+              <div class="overlay"></div>
+              <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </div>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card card_type_picture">
+              <div class="overlay"></div>
+              <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </div>
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a class="lots__look-more-link link-line">посмотреть больше</a>
+    </section>
+    <section class="about">
+      <div class="about__column">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg">
+        </div>
+      </div>
+      <div class="about__column">
+        <h2 class="h2-sections about__title">Об аукционе</h2>
+        <div class="about__text">
+          <p class="about-text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about-text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        </div>
       </div>
     </section>
-    <section class="lots"></section>
-    <section class="about"></section>
   </main>
   <footer class="footer"></footer>
 </body>
