--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
           <span class="aligned-text_right letter-spacing-extended">над</span>
           <span class="aligned-text_right no-letter-spacing ">о</span>
         </span>
-
-
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
@@ -57,8 +55,8 @@
             <article class="card card_type_film">
               <div class="overlay"></div>
               <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-              </div>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+                знали, что режиссёр — Пол Томас Андерсон?</p>
             </article>
           </a>
         </li>
@@ -67,8 +65,10 @@
             <article class="card card_type_book">
               <div class="overlay"></div>
               <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-              </div>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная
+                с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
+                «Улисса» Джеймса Джойса?</p>
             </article>
           </a>
         </li>
@@ -77,8 +77,9 @@
             <article class="card card_type_picture">
               <div class="overlay"></div>
               <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-              </div>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?</p>
             </article>
           </a>
         </li>
@@ -86,22 +87,61 @@
       <a class="lots__look-more-link link-line">посмотреть больше</a>
     </section>
     <section class="about">
-      <div class="about__column">
+      <div class="about__column-one">
         <div class="about__logo">
-          <img class="about__logo-image" src="./images/logo-white.svg">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип белого цвета">
         </div>
       </div>
-      <div class="about__column">
+      <div class="about__column-two">
         <h2 class="h2-sections about__title">Об аукционе</h2>
         <div class="about__text">
-          <p class="about-text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p class="about-text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          <p class="about-text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши
+            лоты вообще не должны были попасть <br> ни на один аукцион. Потому что кому нужен дневник девочки-подростка
+            или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p class="about-text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+            растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря <br>
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+            культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+            культовыми. </p>
         </div>
       </div>
     </section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="footer-start">
+      <address class="header-address">
+        <a class="header-address__link link-line" href="tel:+9999555555">+9 999 555 5555</a>
+        <a class="header-address__link link-line" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="header-address__text">наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+    </div>
+    <div class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link" href="#0">главная</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link link-line" href="#0">посмотреть лоты</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link link-line" href="#0">об аукционе</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__social-list">
+      <a href="#0" class="footer__social-link">
+        <img src="./images/yt.svg" class="footer__social-icon" alt="Иконка Ютуба">
+      </a>
+      <a href="#0" class="footer__social-link">
+        <img src="./images/vk.svg" class="footer__social-icon" alt="Иконка Вк">
+      </a>
+      <a href="#0" class="footer__social-link">
+        <img src="./images/pinterest.svg" class="footer__social-icon" alt="Иконка Пинтереста">
+      </a>
+    </div>
+
+  </footer>
 </body>
 
 </html>
