Специально закомментировал подвал сайта чтобы проверить пройдет ли тест в actions

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="footer-start">
       <address class="header-address">
         <a class="header-address__link link-line" href="tel:+9999555555">+9 999 555 5555</a>
@@ -141,7 +141,7 @@
       </a>
     </div>
 
-  </footer>
+  </footer> -->
 </body>
 
 </html>
